--- a/css/style.css
+++ b/css/style.css
@@ -53,13 +53,14 @@ html{
 }
 
 header{
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 h1{
-    margin: 0.5em;
+    margin: 0.5rem;
 }
 
 .header-buttons{
@@ -85,6 +86,40 @@ h1{
     background-color: var(--light-purple);
 }
 
+.statistics{
+    width: 100%;
+}
+
 h3{
-    margin: 0.5em;
+    margin: 0.5rem;
+}
+
+.squares{
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.total{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    padding: 20px;
+
+    border: 1px solid lightgray;
+    border-radius: 8px;
+    background-color: var(--light-purple);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.total i {
+    font-size: 30px; 
+    margin-bottom: 10px; 
+}
+
+.total p {
+    margin: 5px 0;
 }
