--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,10 @@ header{
     align-items: center;
 }
 
-h1{
+.h1{
+    font-size: 2.5rem;
     margin: 0.5rem;
+    font-weight: bold;
 }
 
 .header-buttons{
@@ -77,7 +79,7 @@ h1{
     border: 1px solid lightgray;
     border-radius: 8px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-
+    font-size: 1rem;
     margin: 0.5em 0.5em;
     padding: 12px;
 }
@@ -90,8 +92,10 @@ h1{
     width: 100%;
 }
 
-h3{
-    margin: 0.5rem;
+.h3{
+    font-size: 1.8rem;
+    margin: 10px;
+    font-weight: bold;
 }
 
 .squares{
@@ -104,22 +108,190 @@ h3{
 .total{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
+    align-items: start;
 
     padding: 20px;
 
     border: 1px solid lightgray;
     border-radius: 8px;
-    background-color: var(--light-purple);
+    /* background-color: var(--light-purple); */
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.total:hover{
+    background-color: var(--light-purple);
 }
 
 .total i {
     font-size: 30px; 
+    font-weight: 500;
     margin-bottom: 10px; 
 }
 
-.total p {
-    margin: 5px 0;
+.total p{
+    margin: 2px 0;
+}
+
+.total .first-p{
+    font-weight: 200;
+}
+
+.total .second-p{
+    font-weight: 500;
+}
+
+.ag-format-container{
+    width: 1142px;
+    margin: 0 auto;
+}
+  
+.ag-courses_box{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  
+    padding: 50px 0;
+}
+
+.ag-courses_item {
+    -ms-flex-preferred-size: calc(33.33333% - 30px);
+    flex-basis: calc(33.33333% - 30px);
+  
+    margin: 0 15px 30px;
+  
+    overflow: hidden;
+  
+    border-radius: 28px;
+}
+
+.ag-courses-item_link{
+    display: block;
+    padding: 30px 20px;
+    /* background-color: #121212; */
+    background-color: var(--dark-purple); 
+  
+    overflow: hidden;
+  
+    position: relative;
+
+    text-decoration: none;
+}
+
+.ag-courses-item_link:hover,
+.ag-courses-item_link:hover .ag-courses-item_date{
+    text-decoration: none;
+    color: #FFF;
+}
+
+.ag-courses-item_link:hover .ag-courses-item_bg{
+    -webkit-transform: scale(10);
+    -ms-transform: scale(10);
+    transform: scale(10);
+}
+
+.ag-courses-item_title{
+    min-height: 87px;
+    margin: 0 0 25px;
+  
+    overflow: hidden;
+  
+    font-weight: bold;
+    font-size: 30px;
+    color: #FFF;
+  
+    z-index: 2;
+    position: relative;
+}
+
+.ag-courses-item_date-box{
+    font-size: 18px;
+    color: #FFF;
+  
+    z-index: 2;
+    position: relative;
+}
+
+.ag-courses-item_date{
+    font-weight: bold;
+    color: #f9b234;
+  
+    -webkit-transition: color .5s ease;
+    -o-transition: color .5s ease;
+    transition: color .5s ease
+}
+
+.ag-courses-item_bg{
+    height: 128px;
+    width: 128px;
+    background-color: #fcc841;
+  
+    z-index: 1;
+    position: absolute;
+    top: -75px;
+    right: -75px;
+  
+    border-radius: 50%;
+  
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+}
+
+.ag-courses_item:nth-child(2n) .ag-courses-item_bg {
+    background-color: #35b316;
+}
+.ag-courses_item:nth-child(3n) .ag-courses-item_bg {
+    background-color: #f24b4b;
+}
+.ag-courses_item:nth-child(4n) .ag-courses-item_bg {
+    background-color: #df894d;
+}
+/*
+.ag-courses_item:nth-child(5n) .ag-courses-item_bg {
+    background-color: #cd3e94;
+}
+.ag-courses_item:nth-child(6n) .ag-courses-item_bg {
+    background-color: #4c49ea;
+}
+*/
+  
+@media only screen and (max-width: 979px) {
+    .ag-courses_item {
+      -ms-flex-preferred-size: calc(50% - 30px);
+      flex-basis: calc(50% - 30px);
+    }
+    .ag-courses-item_title {
+      font-size: 24px;
+    }
+}
+  
+@media only screen and (max-width: 767px) {
+    .ag-format-container {
+      width: 96%;
+    }
+  
+}
+
+@media only screen and (max-width: 639px) {
+    .ag-courses_item {
+      -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+    }
+    .ag-courses-item_title {
+      min-height: 72px;
+      line-height: 1;
+  
+      font-size: 24px;
+    }
+    .ag-courses-item_link {
+      padding: 22px 40px;
+    }
+    .ag-courses-item_date-box {
+      font-size: 16px;
+    }
 }
