--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,6 @@ header{
 
     border: 1px solid lightgray;
     border-radius: 8px;
-    /* background-color: var(--light-purple); */
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
@@ -140,158 +139,122 @@ header{
     font-weight: 500;
 }
 
-.ag-format-container{
+.ag-format-container {
     width: 1142px;
     margin: 0 auto;
 }
   
-.ag-courses_box{
-    display: -webkit-box;
-    display: -ms-flexbox;
+.ag-courses_box {
     display: flex;
-    -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: flex-start;
-    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    justify-content: space-between;
   
     padding: 50px 0;
 }
 
 .ag-courses_item {
-    -ms-flex-preferred-size: calc(33.33333% - 30px);
-    flex-basis: calc(33.33333% - 30px);
-  
+    flex: 1 1 calc(25% - 30px);
     margin: 0 15px 30px;
-  
     overflow: hidden;
-  
     border-radius: 28px;
 }
 
-.ag-courses-item_link{
+.ag-courses-item_link {
     display: block;
     padding: 30px 20px;
-    /* background-color: #121212; */
     background-color: var(--dark-purple); 
-  
     overflow: hidden;
-  
     position: relative;
-
     text-decoration: none;
 }
 
 .ag-courses-item_link:hover,
-.ag-courses-item_link:hover .ag-courses-item_date{
+.ag-courses-item_link:hover .ag-courses-item_date {
     text-decoration: none;
-    color: #FFF;
+    color: var(--white);
 }
 
-.ag-courses-item_link:hover .ag-courses-item_bg{
-    -webkit-transform: scale(10);
-    -ms-transform: scale(10);
+.ag-courses-item_link:hover .ag-courses-item_bg {
     transform: scale(10);
 }
 
-.ag-courses-item_title{
+.ag-courses-item_title {
     min-height: 87px;
-    margin: 0 0 25px;
-  
+    margin: 0 0 10px;
     overflow: hidden;
-  
     font-weight: bold;
     font-size: 30px;
-    color: #FFF;
-  
+    color: var(--white);
     z-index: 2;
     position: relative;
 }
 
-.ag-courses-item_date-box{
+.ag-courses-item_date-box {
     font-size: 18px;
-    color: #FFF;
-  
+    color: var(--white);
     z-index: 2;
     position: relative;
 }
 
-.ag-courses-item_date{
+.ag-courses-item_date {
     font-weight: bold;
-    color: #f9b234;
-  
-    -webkit-transition: color .5s ease;
-    -o-transition: color .5s ease;
-    transition: color .5s ease
+    color: var(--yellow);
+    transition: color .5s ease;
 }
 
-.ag-courses-item_bg{
+.ag-courses-item_bg {
     height: 128px;
     width: 128px;
-    background-color: #fcc841;
-  
+    background-color: var(--yellow);
     z-index: 1;
     position: absolute;
     top: -75px;
     right: -75px;
-  
     border-radius: 50%;
-  
-    -webkit-transition: all .5s ease;
-    -o-transition: all .5s ease;
     transition: all .5s ease;
 }
 
 .ag-courses_item:nth-child(2n) .ag-courses-item_bg {
-    background-color: #35b316;
+    background-color: var(--green);
 }
 .ag-courses_item:nth-child(3n) .ag-courses-item_bg {
-    background-color: #f24b4b;
+    background-color: var(--red);
 }
 .ag-courses_item:nth-child(4n) .ag-courses-item_bg {
-    background-color: #df894d;
+    background-color: var(--light-brown);
 }
-/*
-.ag-courses_item:nth-child(5n) .ag-courses-item_bg {
-    background-color: #cd3e94;
-}
-.ag-courses_item:nth-child(6n) .ag-courses-item_bg {
-    background-color: #4c49ea;
-}
-*/
   
-@media only screen and (max-width: 979px) {
+@media only screen and (max-width: 1200px) {
     .ag-courses_item {
-      -ms-flex-preferred-size: calc(50% - 30px);
-      flex-basis: calc(50% - 30px);
+        flex: 1 1 calc(50% - 30px);
     }
     .ag-courses-item_title {
-      font-size: 24px;
+        font-size: 24px;
     }
 }
   
 @media only screen and (max-width: 767px) {
     .ag-format-container {
-      width: 96%;
+        width: 96%;
     }
-  
+    .ag-courses_item {
+        flex: 1 1 calc(50% - 30px);
+    }
 }
-
+  
 @media only screen and (max-width: 639px) {
     .ag-courses_item {
-      -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+        flex: 1 1 100%;
     }
     .ag-courses-item_title {
-      min-height: 72px;
-      line-height: 1;
-  
-      font-size: 24px;
+        min-height: 72px;
+        line-height: 1;
+        font-size: 24px;
     }
     .ag-courses-item_link {
-      padding: 22px 40px;
+        padding: 22px 40px;
     }
     .ag-courses-item_date-box {
-      font-size: 16px;
+        font-size: 16px;
     }
 }
