--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ html{
     font-variation-settings: "wdth" 100;
 }
 
+/* header start */
 header{
     width: 100%;
     display: flex;
@@ -89,7 +90,9 @@ header{
 .button:hover{
     background-color: var(--light-purple);
 }
+/* header end */
 
+/* statistics start */
 .statistics{
     width: 100%;
 }
@@ -144,7 +147,9 @@ header{
 .total .second-p{
     font-weight: 500;
 }
+/* statistics end */
 
+/* teams start */
 .ag-format-container {
     width: 1142px;
     margin: 0 auto;
@@ -268,83 +273,4 @@ ul{
         font-size: 16px;
     }
 }
-
-/* footer start */
-.footer {
-    position: relative;
-    width: 100%;
-    background: var(--light-purple);
-    min-height: 100px;
-    padding: 20px 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.social-icon,
-.menu {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0;
-    flex-wrap: wrap;
-}
-
-.social-icon__item,
-.menu__item {
-    list-style: none;
-}
-
-.social-icon__link {
-    font-size: 2rem;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-    transition: 0.5s;
-}
-.social-icon__link:hover {
-    transform: translateY(-10px);
-}
-
-.menu__link {
-    font-size: 1.2rem;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-    transition: 0.5s;
-    text-decoration: none;
-    opacity: 0.75;
-    font-weight: 300;
-}
-
-.menu__link:hover {
-    opacity: 1;
-}
-
-.footer p {
-    color: var(--white);
-    margin: 15px 0 10px 0;
-    font-size: 1rem;
-    font-weight: 300;
-}
-
-@keyframes animateWaves {
-    0% {
-        background-position-x: 1000px;
-    }
-    100% {
-        background-positon-x: 0px;
-    }
-}
-
-@keyframes animate {
-    0% {
-        background-position-x: -1000px;
-    }
-    100% {
-        background-positon-x: 0px;
-    }
-}
-/* footer start */
+/* teams end */
